--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-02 12:49:30
+lastsearch = 2024-08-02 14:27:03
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoopA1P90D5PJC5KCh7DHvhsd7v6hin9ScT5VRGlI7qGXfOlUhGO
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOop_lWgKOJtb5Lz58NEAOq9Pjo917YzkMALu2ueILB1_hpJZoynQ
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = 43.5%%
-title = Chiếu trúc cao bằng 1.4m x 1.95
-url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
+match = -69.6%%
+title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
+url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
 
 [lombom.com]
 match = -60.9%%
@@ -29,7 +29,7 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOoqBAgUpvPaMVmBw7VKfQb6Jv0mVLpn-LqWmIoj75EA2dBd5NtTB
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [chieutrucsaigon.com]
 match = -17.4%%
