--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-02 11:26:31
+lastsearch = 2024-08-02 14:17:41
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,9 +12,9 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 32.3%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
+match = -6.5%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
 match = -12.9%%
@@ -29,12 +29,12 @@ url = https://tiki.vn/search?q=chiếu trúc hạt
 [demxanh.com]
 match = -9.7%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooVzXAnJIvnr6iXaUzb483vxR0Qazk9DX-LBDK-SrVgz__5ESGU
 
 [www.sendo.vn]
-match = -12.9%%
-title = Chiếu Trúc 1M Siêu Chất, Giá Ưu Đãi, Khuyến Mãi Hấp Dẫn
-url = https://www.sendo.vn/chieu-truc-1m.htm
+match = -3.2%%
+title = Chiếu Trúc Hạt Quế Lâm kích thước 2m2x2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-2m2x2m-duo-c-kie-m-ha-ng-18050806-117250489.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722038400324_undefined_-1_cateLvl2_0_69_23_-1
 
 [www.lazada.vn]
 match = 16.1%%
