--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-02 13:23:17
+lastsearch = 2024-08-02 14:25:42
 
 [www.linkedin.com]
 match = -172.7%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -272.7%%
-title = San Francisco 10k Runs and Races Calendar 2024/25
-url = https://www.runguides.com/san-francisco/runs/10k/all
+match = -227.3%%
+title = California Ultra Marathon Calendar 2024/25
+url = https://www.runguides.com/california/runs/ultra/all
 
 [www.kategridley.com]
 match = -125.0%%
