--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-02 05:12:54
+lastsearch = 2024-08-02 14:28:24
 
 [www.tui.co.uk]
 match = -7.7%%
@@ -22,8 +22,8 @@ title = Live TUI Airways Flight Status
 url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
-match = -160.0%%
-title = Singapore Cruise Ship Schedule 15 February 2024
+match = -200.0%%
+title = Singapore Cruise Ship Schedule 15 February 2024 | ...
 url = https://www.cruisetimetables.com/singaporeschedule-15feb2024.html
 
 [www.partstown.com]
@@ -87,8 +87,8 @@ title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -180.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
+match = -220.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
