--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-02 06:46:53
+lastsearch = 2024-08-02 14:34:09
 
 [changagoidemsonghong.com]
-match = 7.4%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://changagoidemsonghong.com/chan-ga-goi-bc16
+match = 37.0%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [demhong.vn]
 match = 11.1%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối úc cotton 16
 url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 
 [runa.vn]
-match = 33.3%%
-title = Bộ Chăn Ga Gối Satin Cotton Màu Chocolate
-url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-beige
+match = 37.0%%
+title = Bộ Chăn Gối Cotton Jersey Blue
+url = https://runa.vn/bo-chan-goi-cotton-jersey-blue
 
 [songhonghanoi.vn]
 match = 11.1%%
