--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-02 08:04:07
+lastsearch = 2024-08-02 14:42:17
 
 [eva.vn]
-match = -163.2%%
-title = 8 loại cây bóng mát vừa cho hoa đẹp vừa ít rụng lá, trồng ...
-url = https://eva.vn/cay-canh-vuon/8-loai-cay-bong-mat-vua-cho-hoa-dep-vua-it-rung-la-trong-truoc-nha-chang-khac-gi-co-than-giu-cua-c283a580819.html
+match = -126.3%%
+title = Trồng hoa nhài dùng 3 tuyệt chiêu, 1 cây nở 400 bông ...
+url = https://eva.vn/cay-canh-vuon/trong-hoa-nhai-dung-3-tuyet-chieu-1-cay-no-400-bong-huong-hoa-day-nha-cu-tan-lai-no-c283a564020.html
 
 [phunutoday.vn]
 match = -152.6%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
 url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
 
 [mocnhienfarm.com]
-match = -100.0%%
-title = Linh sam siêu bông Sông Hinh, tím hồng, lá nhỏ M1
-url = https://mocnhienfarm.com/products/linh-sam-sieu-bong
+match = -7.7%%
+title = Cây pháo bông
+url = https://mocnhienfarm.com/products/cay-phao-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
