--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -67,9 +67,9 @@ title = TỰ TAY LÀM NEM CUA BỂ NGON KHÔNG CƯỠNG NỔI
 url = https://vuacua.vn/blogs/cac-cau-chuyen-cua-vua-cua/tu-tay-lam-nem-cua-be-ngon-khong-cuong-noi
 
 [www.diepxuan.com]
-match = -111.1%%
-title = Điệp Xuân Nệm siêu nhẹ 9F 15 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [lanchi.vn]
 match = 16.7%%
@@ -137,9 +137,9 @@ title = Nệm Cao Su Thiên Nhiên 100%% Phước Long Premium
 url = https://nemphuoclong.vn/nem-cao-su-thien-nhien-100-phuoc-long-premium
 
 [shopee.vn]
-match = 11.1%%
-title = Đệm xốp PE siêu nhẹ không xẹp
-url = https://shopee.vn/Đệm-xốp-PE-siêu-nhẹ-không-xẹp-i.13406575.612260964
+match = -77.8%%
+title = Đệm gấp 3 tấm pe siêu nhẹ vỏ gấm dễ di chuyển
+url = https://shopee.vn/Đệm-gấp-3-tấm-pe-siêu-nhẹ-vỏ-gấm-dễ-di-chuyển-i.108512481.11706279549
 
 [icondenim.com]
 match = -133.3%%
@@ -195,4 +195,34 @@ url = https://fptshop.com.vn/tin-tuc/dien-may/cach-lam-banh-da-nem-175898
 match = -138.9%%
 title = Niên giám thống kê Việt Nam năm 2018 = Statistical ...
 url = https://www.gso.gov.vn/wp-content/uploads/2019/10/Nien-giam-2018-1.pdf
+
+[khonemtonghop.com]
+match = -127.8%%
+title = Báo Giá Nệm Cao Su Non 15cm Các Loại Mới Nhất 2024
+url = https://khonemtonghop.com/bao-gia-nem-cao-su-non-15cm/
+
+[nemhana.com]
+match = -94.4%%
+title = Nệm cao su thiên nhiên Thắng Lợi Super Win gấp 3
+url = https://nemhana.com/nem-cao-su-thien-nhien-thang-loi-super-win-gap-3/
+
+[lombom.com]
+match = -122.2%%
+title = Đệm Sinh Viên nệm xốp ép siêu nhẹ giá rẻ - Lombomshop!
+url = https://lombom.com/dem-sinh-vien/
+
+[ru9.vn]
+match = -94.4%%
+title = Nệm Nest 15cm - Nệm Thiết Yếu Cho Giấc Ngủ Ngon
+url = https://ru9.vn/products/foam-nest
+
+[edena.vn]
+match = -83.3%%
+title = NÊN MUA NỆM DÀY BAO NHIÊU CM TỐT CHO SỨC ...
+url = https://edena.vn/blogs/suc-khoe/nen-mua-nem-day-bao-nhieu-cm-tot-cho-suc-khoe-cot-song
+
+[sieuthinem.com]
+match = 11.1%%
+title = NỆM BÔNG ÉP KOREA VẢI GẤM
+url = https://sieuthinem.com/ct-san-pham/121/nem-bong-ep-korea-vai-gam-sieu-thi-nem-com.html
 
