--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-02 13:49:38
+lastsearch = 2024-08-02 15:33:34
 
 [www.diepxuan.com]
-match = -125.0%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
+match = -131.2%%
+title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -143.8%%
-title = Gloss for life #beautytok #hudabeauty #lip ...
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -231.2%%
+title = Replying to @chixangel0411 Flortte Lip Gloss Serum Super ...
+url = https://www.tiktok.com/@kizha.nicolee/video/7236660335929871621
 
 [archiveofourown.org]
 match = -137.5%%
