--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-02 05:39:59
+lastsearch = 2024-08-02 16:15:55
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = -3.6%%
-title = Hội Cô dâu Việt Nam bán hàng tại Đài Loan
-url = https://www.facebook.com/groups/2907402146157310/
+match = 11.1%%
+title = CHỢ ĐỒ CŨ ĐÀI LOAN
+url = https://www.facebook.com/groups/2967174413509226/
 
 [nhua66a.com]
 match = -17.9%%
