--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-02 15:25:06
+lastsearch = 2024-08-02 16:16:39
 
 [www.reddit.com]
 match = -82.6%%
@@ -122,9 +122,9 @@ title = Olaf Builds 14.14 - Best Korean Builds | Koreanbuilds.net
 url = https://koreanbuilds.net/champion/Olaf
 
 [esport1.hu]
-match = -104.3%%
-title = Így számold ki mennyit érhet a League of Legends-profilod
-url = https://esport1.hu/news/2024/04/14/riot-games-league-of-legends-nezd-meg-mennyit-is-erne-a-lol-profilod-inora
+match = -165.2%%
+title = A Griffin menedzsere mellett az ex-edzőt is eltiltották az e-sporttól ...
+url = https://esport1.hu/news/2019/11/20/lol-riot-games-esport-drama-botrany-korea-cvmax-cho-veres-wolfi
 
 [escholarship.mcgill.ca]
 match = 8.7%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [lol.fandom.com]
 match = 0.0%%
